--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>Demo</title>
+<title>Passo 1</title>
 <link rel="stylesheet" media="screen" href="style.css" />
 
 <!-- This is for mobile devices -->
@@ -41,7 +41,7 @@ function doisAdultos() {
 </head>
 
 <body>
-<form id="form" action="ListaHoteis.php" method="GET" style="margin-top:30px; margin-bottom:0px;">
+<form id="form" action="step2.php" method="GET">
 <h2>Selecione o hotel:</h2>
 <div class="styled">
 	<select id="codHotel" name="CodHotel">
@@ -86,6 +86,10 @@ function doisAdultos() {
 		<option value="10">10</option>
 		<option value="11">11</option>
 		<option value="12">12</option>
+		<option value="13">13</option>
+		<option value="14">14</option>
+		<option value="15">15</option>
+		<option value="16">16</option>
 	</select>
 </div>
 <br>
