--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- This makes HTML5 elements work in IE 6-8 -->
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<script src="mascaras.js"></script>
 <script type="text/javascript">
 function temCrianca() {
   if (document.getElementById("crianca").checked) {
@@ -37,64 +38,76 @@ function doisAdultos() {
     document.getElementById("idadeCrianca").disabled=false;
   }
 }
+
+function submitForm() {
+	// if () {
+	//   document.getElementById("container-passo2").style.display="none";	
+	  document.getElementById("form").submit();
+	// }
+	// else {document.getElementById("warning").style.display="";}
+}
 </script>
+<style type="text/css">
+#warning {color: red; font-weight: bold;}
+</style>
 </head>
 
 <body>
 <form id="form" action="step2.php" method="GET">
-<h2>Selecione o hotel:</h2>
-<div class="styled">
-	<select id="codHotel" name="CodHotel">
-		
-		<option value="208245">Citi Hotel Residence</option>
-		<option value="208244">Hotel Central</option>
-		<option value="208243">BR Palace</option>
-	</select>
-</div>
-<br>
-<h2>Data de chegada:</h2>
-<p><input name="chegada" id="dtchegada" type="text" placeholder="dd/mm/aaaa" value="20/10/2013"></p>
-<br>
-<h2>Data de partida:</h2>
-<p><input name="partida" id="dtpartida" type="text" placeholder="dd/mm/aaaa" value="21/10/2013"></p> 
-<br>
-<h2>Adultos:</h2>
-<div class="styled">
-	<select id="qtdAdultos" name="qtdAdultos" onChange="doisAdultos()">
-		<option selected="selected" value="1">1</option>
-		<option value="2">2</option>
-	</select>
-</div>
-<br>
-<h2>Criança:</h2>
-<p>
-<input type="checkbox" name="crianca" id="crianca" value="true" onChange="temCrianca()" /><label for="crianca">Sim</label></p>
-</p>
-<h2>Idade da criança:</h2>
-<div class="styled">
-	<select id="idadeCrianca" name="idadeCrianca" disabled>
-		<option selected="selected" value="0">0</option>
-		<option value="1">1</option>
-		<option value="2">2</option>
-		<option value="3">3</option>
-		<option value="4">4</option>
-		<option value="5">5</option>
-		<option value="6">6</option>
-		<option value="7">7</option>
-		<option value="8">8</option>
-		<option value="9">9</option>
-		<option value="10">10</option>
-		<option value="11">11</option>
-		<option value="12">12</option>
-		<option value="13">13</option>
-		<option value="14">14</option>
-		<option value="15">15</option>
-		<option value="16">16</option>
-	</select>
-</div>
-<br>
-</span>
-<p><input type="submit" value="Procurar &raquo;"> </p>
+	<h2>Selecione o hotel:</h2>
+	<div class="styled">
+		<select id="codHotel" name="CodHotel">
+			
+			<option value="208245">Citi Hotel Residence</option>
+			<option value="208244">Hotel Central</option>
+			<option value="208243">BR Palace</option>
+		</select>
+	</div>
+	<br>
+	<h2>Data de chegada:</h2>
+	<p><input name="chegada" id="dtchegada" type="text" placeholder="dd/mm/aaaa" onKeyPress="MascaraData(this);" maxlength="10" onBlur= "ValidaData(this);"><span id="dtchegada-erro" style="color: red; margin-left: 5px; display:none;">data inválida</span></p>
+	<br>
+	<h2>Data de partida:</h2>
+	<p><input name="partida" id="dtpartida" type="text" placeholder="dd/mm/aaaa" onKeyPress="MascaraData(this);" maxlength="10" onBlur= "ValidaData(this);"><span id="dtpartida-erro" style="color: red; margin-left: 5px; display:none;">data inválida</span></p>
+	<br>
+	<h2>Adultos:</h2>
+	<div class="styled">
+		<select id="qtdAdultos" name="qtdAdultos" onChange="doisAdultos()">
+			<option selected="selected" value="1">1</option>
+			<option value="2">2</option>
+		</select>
+	</div>
+	<br>
+	<h2>Criança:</h2>
+	<p>
+	<input type="checkbox" name="crianca" id="crianca" value="true" onChange="temCrianca()" /><label for="crianca">Sim</label></p>
+	</p>
+	<h2>Idade da criança:</h2>
+	<div class="styled">
+		<select id="idadeCrianca" name="idadeCrianca" disabled>
+			<option selected="selected" value="0">0</option>
+			<option value="1">1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5</option>
+			<option value="6">6</option>
+			<option value="7">7</option>
+			<option value="8">8</option>
+			<option value="9">9</option>
+			<option value="10">10</option>
+			<option value="11">11</option>
+			<option value="12">12</option>
+			<option value="13">13</option>
+			<option value="14">14</option>
+			<option value="15">15</option>
+			<option value="16">16</option>
+		</select>
+	</div>
+	<br>
+	</span>
+	<p><a href="#" class="btn btn-primary" onclick="submitForm();">Procurar &raquo;</a></p>
+	<p id="warning" style="display:none">Preencha os campos corretamente!</p>
 </form>
 </body>
 </html>
